[tool.poetry]
name = "top25reportbot"
version = "0.1.0"
description = ""
authors = ["Elijah Conners <business@elijahpepe.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pywikibot = "^7.6.0"
mwparserfromhell = "^0.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
